--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.6.5",
